@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter v25.11.12-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-11-12 23:20:17, took 00:09:49, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries
+-;-;-;freeRouter v25.11.13-cur, done by sprscc13@mrn0b0dy.
+-;-;-;2025-11-13 06:36:05, took 00:13:33, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
