@@ -9,8 +9,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v25.11.12-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-11-12 23:20:17, took 00:09:49, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
+release: freeRouter v25.11.13-cur, done by sprscc13@mrn0b0dy.<br/>
+tested: 2025-11-13 06:36:05, took 00:13:33, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
